# folderlock

./: Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
folderlock-lib/: Cargo.toml
folderlock-ui/: index.html
folderlock-ui/src/: main.ts
folderlock-ui/src-tauri/: Cargo.toml  tauri.conf.json
folderlock-ui/src-tauri/src/: main.rs
folderlock-ui/src-tauri/src/app/: commands.rs  mod.rs  password.rs  store.rs
folderlock-ui/src/config/: constants.ts
folderlock-ui/src/lib/actions/: drop-zone.ts
folderlock-ui/src/lib/components/: Button.svelte
folderlock-ui/src/pages/: _layout.svelte  auth.svelte  settings.svelte
src/: App.vue  app.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: commands.rs  config.rs  hide.rs  mod.rs  store.rs  utils.rs
src/components/: actions-wrapper.vue  app-aside.vue  app-button.vue  app-checkbox.vue  app-content.vue  app-footer.vue  app-table.vue  blank-message.vue  greet.vue  table-body.vue  table-head.vue  table-td.vue  table-th.vue  table-tr.vue  table-wrapper.vue  view-wrapper.vue
src/composables/: use-app-setup.ts  use-tauri-store.ts
src/config/: constants.ts
src/lib/components/: Checkbox.svelte
src/lib/components/app/: Aside.svelte  Content.svelte  Footer.svelte  ViewWrapper.svelte
src/lib/components/table/: TableTd.svelte  TableTh.svelte
src/lib/store/: global.ts
src/pages/: index.svelte  settings.svelte
src/router/: index.ts
src/views/: auth.vue  encrypt.vue  hide.vue  home.vue  settings.vue
(+5 files in other folders)
