[package]
name = "folderlock"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["fs-create-dir", "fs-read-dir", "fs-write-file", "notification-all", "os-all", "path-all", "process-relaunch", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
sled = "0.34.7"
bincode = "1.3.3"
bcrypt = "0.14.0"
uuid = { version = "1.3.2", features = ["v4", "fast-rng"] }
dirs-next = "2.0.0"
argon_hash_password = "0.1.2"
chacha20poly1305 = { version = "0.10.1", features = ["stream"] }
zeroize = "1.6.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
